# SKUI

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.gitea/issue_tamplate/: bug-report.yml
.gitea/issue_template/: bug-report.yml
.gitea/workflows/: build-skui.yml  clang-format.yml
docs/: usermanuel.md
src/app/: CMakeLists.txt  context_menu.cpp  context_menu.h  context_menu.hpp  document.cpp  document.h  document.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  propertywindow.cpp  propertywindow.h  rename_node_dialog.cpp  rename_node_dialog.h  rename_node_dialog.hpp  skui.cpp  skui.hpp
src/node/: CMakeLists.txt  interface.cpp  interface.h  node.cpp  node.h  node.hpp
src/node/nodes/: label.cpp  label.h  label.hpp  lineedit.cpp  lineedit.h  lineedit.hpp  serialsend.cpp  serialsend.h  serialsend.hpp  slider.cpp  slider.h  slider.hpp  textcombine.cpp  textcombine.h  textcombine.hpp  visual.cpp  visual.h  visual.hpp
src/nodeeditor/: CMakeLists.txt  nodeeditor.cpp  nodeeditor.h  nodeeditor.hpp  nodeeditor_scene.cpp  nodeeditor_scene.h  nodeeditor_scene.hpp
src/nodeeditor/graphicsitems/: cable.cpp  cable.h  cable.hpp  node_graphicsitem.cpp  node_graphicsitem.h  node_graphicsitem.hpp  pad.cpp  pad.h  pad.hpp
src/panel/: CMakeLists.txt  panel.cpp  panel.h  panel.hpp  propertywindow.h  resizeboundingbox.cpp  resizeboundingbox.h  resizeboundingbox.hpp  visual_container.cpp  visual_container.h  visual_container.hpp
src/python/: CMakeLists.txt  python_service.cpp  python_service.hpp  stdout_proxy.cpp  stdout_proxy.hpp
